osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_unique_stored_names/test_unique_stored_names_fails_with_dupe_names_in_different_file.txt
error: features must be unique across all rule files
--> main.sml:1:0
     |
   1 | Foo = 1
     | ^ this feature is defined in multiple locations
~~~ such as:
--> (1) foo.sml:1:0
     |
   1 | Foo = 1
     | ^